2005-09-13  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_signal_idler), (got_found_tag):
	Ref the source in the got_found_tag, and unref it in the idle
	signal handler (Closes: #314803), thanks to Jan Schmidt
	<thaytan@mad.scientist.com> for the hint

2005-09-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (popup_timeout_add), (on_mouse_click_fullscreen),
	(on_video_motion_notify_event): patch from Wouter Bolsterlee 
	<uws+gnome@xs4all.nl> to simplify the popup timeout code
	(Closes: #316122)

2005-09-10  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am: Don't change a variable in the configure.in after
	it's been AC_SUBST'ed, hardcode the D-Bus warning instead, fixes
	the build when the Mozilla plugin is enabled (Closes: #315864)

2005-09-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.cpp: avoid passing undefined data to
	gnome_vfs_mime_get_description (Closes: #315911)

2005-09-07  William Jon McCann  <mccann@jhu.edu>


	* src/totem-scrsaver.c (screensaver_is_running_dbus) 
	(screensaver_inhibit_dbus, screensaver_enable_dbus) 
	(screensaver_disable_dbus, screensaver_init_dbus) 
	(screensaver_enable_x11, screensaver_disable_x11) 
	(screensaver_init_x11, totem_scrsaver_init) 
	(totem_scrsaver_disable, totem_scrsaver_enable) 
	(totem_scrsaver_finalize): Split X11 actions
	into separate functions.  Try to inhibit
	gnome-screensaver via DBus and fall back to
	X11 if it isn't available.

	* configure.in: Check for DBus.

2005-09-05  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_set_show_cursor):
	* src/totem.c: (window_state_event_cb),
	(totem_action_fullscreen_toggle), (totem_callback_connect):
	Avoid weird states when using the "Toggle fullscreen mode" window
	manager shortcut (Closes: #302592)

============ Version 1.2.0

2005-09-05  Bastien Nocera  <hadess@hadess.net>

	* configure.in: 1.2.0
	* NEWS: upd
