@@ -1,5 +1,10 @@
 2005-09-13  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-mozilla-plugin.cpp: Remove plenty of debug spew
+	(Closes: #314113)
+
+2005-09-13  Bastien Nocera  <hadess@hadess.net>
+
 	* src/backend/bacon-video-widget-gst.c:
 	(bacon_video_widget_signal_idler), (got_found_tag):
 	Ref the source in the got_found_tag, and unref it in the idle
